# arwaincoretest

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LSM6DS33.cpp  LSM6DS33.h  Makefile  README.md  app  arwain.conf  arwain_libs.cmake  arwain_tests.cmake  bitbucket-pipelines.yml  bmi2.c  buildall  calib.txt  calibrate_bmi270.cpp  examples.cpp  generate_test_coverage_report.sh  gyro_temp.txt  imu_bmi270.cpp  main.cpp  quaternions.cpp  quaternions.h  runscreens.sh  stance.cpp  stance.h  visualisation.py
U002-IMU_IIM42652_driver/: IMU_IIM42652_driver.cpp  IMU_IIM42652_driver.hpp
arwain_lib/: CMakeLists.txt  activity_metric.cpp  activity_metric.hpp  altimeter.cpp  altimeter.hpp  arwain.cpp  arwain.hpp  arwain_tests.cpp  arwain_tests.hpp  arwain_utils.cpp  arwain_utils.hpp  calibration.cpp  calibration.hpp  command_line.cpp  command_line.hpp  configuration.cpp  configuration.hpp  imu_reader.cpp  imu_reader.hpp  multi_imu.hpp  realsense.cpp  realsense.hpp  sabatini_altimeter.hpp  sensor_manager.cpp  sensor_manager.hpp  stance.cpp  stance.hpp  std_output.cpp  std_output.hpp  tests.cmake  transmit_lora.cpp  transmit_lora.hpp  uwb_reader.cpp  uwb_reader.hpp  velocity_prediction.cpp  velocity_prediction.hpp
arwain_lib/include/: activity_metric.hpp  altimeter.hpp  arwain.hpp  arwain_job_interface.hpp  arwain_modes.hpp  arwain_tests.hpp  arwain_utils.hpp  calibration.hpp  command_line.hpp  configuration.hpp  corner_detector.hpp  event_manager.hpp  floor_tracker.hpp  global_buffer.hpp  i2c_interface.hpp  indoor_positioning_wrapper.hpp  multi_imu.hpp  ncs2_inferrer.hpp  realsense.hpp  sabatini_altimeter.hpp  sensor_manager.hpp  serial.hpp  spi_interface.hpp  stance.hpp  std_output.hpp  tf_inferrer.hpp  transmit_lora.hpp  uwb_reader.hpp  vel_infer_interface.hpp  velocity_prediction.hpp
arwain_lib/include/arwain/: activity_metric.hpp  altimeter.hpp  arwain.hpp  arwain_bit.hpp  calibration.hpp  command_line.hpp  configuration.hpp  corner_detector.hpp  event_manager.hpp  events.hpp  exceptions.hpp  floor_tracker.hpp  global_buffer.hpp  hybrid_positioner.hpp  i2c_interface.hpp  indoor_positioning_wrapper.hpp  job_interface.hpp  modes.hpp  multi_imu.hpp  realsense.hpp  sensor_manager.hpp  serial.hpp  service_interface.hpp  service_manager.hpp  stance.hpp  std_output.hpp  tf_inferrer.hpp  thread.hpp  transmit_lora.hpp  utils.hpp  uwb_reader.hpp  vel_infer_interface.hpp  velocity_prediction.hpp  ws_includes.hpp  ws_messenger.hpp
arwain_lib/src/: activity_metric.cpp  altimeter.cpp  arwain.cpp  arwain_bit.cpp  arwain_tests.cpp  arwain_thread.cpp  arwain_utils.cpp  calibration.cpp  command_line.cpp  configuration.cpp  corner_detector.cpp  floor_tracker.cpp  hybrid_positioner.cpp  indoor_positioning_wrapper.cpp  lora_commander.cpp  multi_imu.cpp  realsense.cpp  sensor_manager.cpp  service_manager.cpp  stance.cpp  std_output.cpp  transmit_lora.cpp  uwb_reader.cpp  velocity_prediction.cpp  ws_messages.cpp  ws_messenger.cpp
arwain_lib/tests/: activity_metric.cpp  service_manager.cpp  test_base.hpp
arwain_thread/: CMakeLists.txt  arwain_thread.cpp  arwain_thread.hpp
arwain_torch/: arwain_torch.cpp  arwain_torch.h
bmi270/: CMakeLists.txt  bmi270.cpp  bmi270.hpp  bmm150_defs.h
bmp280/: CMakeLists.txt  bmp280.c  bmp280.cpp  bmp280.hpp
bmp384/: CMakeLists.txt  bmp384.cpp  bmp384.hpp
bmp384/include/: bmp384.hpp
bmp384/src/: bmp384.cpp
data/: acce.txt  euler_orientation.txt  gyro.txt  lora_log.txt  mag.txt  quat_orientation.txt  velocity.txt
future_src/: arwain_thread_future.cpp  bin_log.h  ie.cpp  rknn_api.cpp  safe_buffer.h  test_twr.cpp
iim42652/: .gitignore  CMakeLists.txt  IMU_IIM42652_driver.cpp  IMU_IIM42652_driver.hpp  calibrate_imu.cpp
iim42652/include/: iim42652.hpp
iim42652/src/: IMU_IIM42652_driver.cpp  iim42652.cpp
input_parser/: CMakeLists.txt
ips/: CMakeLists.txt  corner_detector.cpp  corner_detector.hpp  floor_tracker.cpp  floor_tracker.hpp  indoor_positioning_wrapper.cpp  indoor_positioning_wrapper.hpp
kalman/: CMakeLists.txt  kalman.cpp  kalman.hpp  kalman_example.cpp
lis3mdl/: CMakeLists.txt  lis3mdl.cpp  lis3mdl.hpp
logger/: CMakeLists.txt  logger.cpp  logger.hpp  logger_test.cpp
logger/include/: logger.hpp
logger/src/: logger.cpp
lora/: CMakeLists.txt  lora.cpp  lora.hpp  lora_tx_test.cpp  spi.cpp  spi.hpp
lora/include/: lora.hpp  spi.hpp
lora/src/: lora.cpp  spi.cpp
lora_driver/: Makefile  lora.cpp  lora.hpp  lora_rx_test.cpp  lora_tx_test.cpp
mlx90395/: CMakeLists.txt  magn_test.cpp  mlx90395.cpp  mlx90395.hpp
models/: XYZ_RoNIN_v0.4.xml  XYZ_RoNIN_v0.6.xml
orientation/: CMakeLists.txt  efaroe.cpp  efaroe.hpp  efaroe_standalone.cpp  filter.h  filter.hpp  madgwick.cpp  madgwick.hpp  madgwick_standalone.cpp  new_madgwick_Fusion.h  new_madgwick_FusionAhrs.c  new_madgwick_FusionAhrs.h  new_madgwick_FusionCalibration.h  new_madgwick_FusionCompass.cpp  new_madgwick_FusionCompass.h
orientation/include/: android_fusion.hpp  efaroe.hpp  filter.hpp  madgwick.hpp  new_madgwick_FusionBias.h
orientation/src/: android_fusion.cpp  efaroe.cpp  efaroe_standalone.cpp  madgwick.cpp  madgwick_standalone.cpp  new_madgwick_FusionBias.cpp
orientation_fusion/: fusion.cpp
python_utils/: allan_variance.py  bmp280.py  controller.py  create_bag.py  dashboard.py  draw_path.py  drift_simulator.py  lora_transmitter.py  ncs2_interface.py  plot_quaternions.py  plot_temp_bias.py  requirements.txt  visualisation.py
quaternion/: CMakeLists.txt  quaternion.cpp  quaternion.hpp
realsense_t265/: CMakeLists.txt  t265.cpp  t265.hpp
src/: altimeter.cpp  altimeter.hpp  arwain.cpp  arwain.hpp  arwain_tests.cpp  arwain_tests.hpp  arwain_torch.h  bin_log.cpp  bin_log.h  bmi2.c  bmi270.cpp  bmi270.hpp  bmp280.cpp  bmp280.h  bmp280a.h  build_config.hpp  calibrate_bmi270.cpp  calibrate_imu.cpp  calibration.cpp  calibration.hpp  command_line.cpp  command_line.hpp  configuration.cpp  configuration.hpp  efaroe.cpp  efaroe.h  exceptions.hpp  file_inference.cpp  filter.h  geomagnetic_orientation.cpp  geomagnetic_orientation.hpp  global_buffer.hpp  half.h  (+54 more)
(+71 files in other folders)
