cmake_minimum_required(VERSION 3.16)
project(bmp384)
include_directories(include)
add_library(bmp384 src/bmp384.cpp)
if(UNIT_TESTS)
    if(NOT CHERI)
        message("Building ${PROJECT_NAME} with test coverage")
        target_compile_options(${PROJECT_NAME} PRIVATE -ftest-coverage -fprofile-arcs -Wfatal-errors)
    endif()
endif()
