cmake_minimum_required(VERSION 3.16)
project(iim42652_driver)
include_directories(include)
add_library(${PROJECT_NAME} STATIC src/iim42652.cpp)
target_compile_options(${PROJECT_NAME} PRIVATE -Wno-psabi -Wall -Wshadow)
target_link_libraries(${PROJECT_NAME} i2c)
if(UNIT_TESTS)
    message("Building ${PROJECT_NAME} with test coverage")
    target_compile_options(${PROJECT_NAME} PRIVATE -ftest-coverage -fprofile-arcs)
endif()