cmake_minimum_required(VERSION 3.16)
project(lora)
include_directories(include)
add_library(${PROJECT_NAME} STATIC src/lora.cpp src/spi.cpp)
target_compile_options(${PROJECT_NAME} PRIVATE -Wno-psabi -Wall -Wshadow)
if(UNIT_TESTS)
    message("Building ${PROJECT_NAME} with test coverage")
    target_compile_options(${PROJECT_NAME} PRIVATE -ftest-coverage -fprofile-arcs)
endif()